--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -114,7 +114,7 @@ img {
   text-align: center;
   padding-top: 20px;
   color: $grey-text;
-  background-image: url("../secciones/Imagenes/ecofriendly3.png");
+  background-image: url("Imagenes/ecofriendly3.png");
   background-repeat:repeat-x;
   }
 
@@ -144,7 +144,7 @@ img {
   color: gray;
   animation-duration: 4s;
   animation-name: aparecer;
-  background-image: url("../secciones/Imagenes/ecofriendly3.png"); 
+  background-image: url("Imagenes/ecofriendly3.png"); 
   letter-spacing: 2px;
   text-align:center;
 }
